[package]
name = "coding-problems"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "longest_palindrome"
path = "problems/medium/longest_palindrome.rs"

[[bin]]
name = "letter_combination"
path = "problems/medium/letter_combination.rs"

[[bin]]
name = "valid_parentheses"
path = "problems/valid_parentheses.rs"